<?xml version="1.0"?>
<package format="2">
  <name>ptp_msgs</name>
  <version>0.0.0</version>
  <description>Msgs for Pedestrian Trajectory Prediction</description>
  <maintainer email="fmasaki2020@gmail.com">Masaki Fujiwara</maintainer>
  <license>GPL-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>

  <depend>message_runtime</depend>

</package>
